hooked up form with route method

--- a/project/templates/tasks.html
+++ b/project/templates/tasks.html
@@ -14,7 +14,7 @@
           </td>
           <td>
             <label>Due Date (mm/dd/yyyy):</label>
-            <input name="due_date" type="text" width="120px">
+            <input name="due_date" type="text" style="width:160px;">
           </td>
           <td>
             <label>Priority:</label>
@@ -88,7 +88,8 @@
             <td width="100px">{{ task.due_date }}</td>
             <td width="50px">{{ task.priority }}</td>
           <td>
-            <a href="{{ url_for('delete_entry', task_id = task.task_id) }}">Delete</a>
+            <a href="{{ url_for('delete_entry', task_id = task.task_id) }}">Delete</a>  -
+            <a href="{{ url_for('incomplete', task_id = task.task_id) }}">Mark as Incomplete</a>
           </td>
           </tr>
         {% endfor %}
