--- a/project/templates/login.html
+++ b/project/templates/login.html
@@ -4,22 +4,21 @@
   <h1>Welcome to FlaskTaskr.</h1>
   <h3>Please login to access your task list.</h3>
 
-  <form action="/" method="post">
-    <div class="input-group">
-      <label for="name">Username:</label>
-      <input type="text" id="username" name="username" value="{{
-        request.form.username }}">
-    </div>
-    <div class="input-group">
-      <label for="mail">Password:</label>
-      <input type="password" id="password" name="password" value="{{
-        request.form.password }}"/>
+  <form method="post" action="/">
+    {{ form.csrf_token }}
+    <div>
+      {{ form.name.label }}
+      {{ form.name }}
     </div>
     <div>
-      <button type="submit">Login</button>
+      {{ form.password.label }}
+      {{ form.password }}
+    </div>
+    <div>
+      <input type="submit" value="Submit">
     </div>
   </form>
 
-  <p><em>Use 'admin' for the username and password.</em></p>
+<p><em>Need an account? </em><a href="/register">Signup!!</a></p>
 
 {% endblock %}
