converted to sqlAlchemy

--- a/project/templates/login.html
+++ b/project/templates/login.html
@@ -15,10 +15,12 @@
       {{ form.password }}
     </div>
     <div>
-      <input type="submit" value="Submit">
+      <button type="submit">Submit</button>
     </div>
   </form>
 
-<p><em>Need an account? </em><a href="/register">Signup!!</a></p>
+  <div>
+    <em>Need an account? </em><a href="/register">Signup!!</a>
+  </div>
 
 {% endblock %}
