--- a/project/templates/register.html
+++ b/project/templates/register.html
@@ -22,7 +22,7 @@
       {{ form.confirm}}
     </div>
     <div>
-      <input type="submit" value="Register"></p>
+      <button type="submit">Submit</button>
     </div>
   </form>
 
