--- a/project/templates/login.html
+++ b/project/templates/login.html
@@ -1,39 +1,36 @@
 {% extends "_base.html" %}
+
 {% block content %}
 
-  <h1>Welcome to FlaskTaskr.</h1>
-  <h3>Please login to access your task list.</h3>
-  <div class="half-width">
-    <form method="post" action="/">
-      {{ form.csrf_token }}
-      <div class="input-group">
-        {{ form.name(placeholder="name") }}
-        {% if form.name.errors %}
-        <span class="error">
-          {% for error in form.name.errors %}
-          {{error}}
-          {% endfor %}
-        </span>
-        {% endif %}
-      </div>
-      <div class="input-group">
-        {{ form.password(placeholder="password") }}
-        {% if form.password.errors %}
-        <span class="error">
-          {% for error in form.password.errors %}
-          {{error}}
-          {% endfor %}
-        </span>
-        {% endif %}
-      </div>
-      <div>
-        <button class="button" type="submit">Submit</button>
-      </div>
-    </form>
-  </div>
+<h1>Welcome to FlaskTaskr.</h1>
+<h3>Please sign in to access your task list</h3>
 
-  <div>
-    <em>Need an account? </em><a href="/register">Signup!!</a>
-  </div>
+<form class="form-signin" role="form" method="post" action="/">
+  {{ form.csrf_token }}
+    <div class="input-group">
+      <span class="error">
+        {% if form.name.errors %}
+        {% for error in form.name.errors %}
+        {{ error }}
+        {% endfor %}
+        {% endif %}
+      </span>
+      {{ form.name(placeholder="email address") }}
+    </div>
+    <div class="input-group">
+      <span class="error">
+        {% if form.password.errors %}
+        {% for error in form.password.errors %}
+        {{ error }}
+        {% endfor %}
+        {% endif %}
+      </span>
+      {{ form.password(placeholder="password") }}
+    </div>
+  <button class="btn btn-sm btn-success" type="submit">Sign in</button>
+  <br>
+  <br>
+  <p><em>Need an account? </em><a href="/register">Signup!!</a></p>
+</form>
 
 {% endblock %}
