working with blue print

--- a/project/templates/login.html
+++ b/project/templates/login.html
@@ -15,7 +15,7 @@
         {% endfor %}
         {% endif %}
       </span>
-      {{ form.name(placeholder="email address") }}
+      {{ form.name(placeholder="user name") }}
     </div>
     <div class="input-group">
       <span class="error">
