--- a/project/templates/tasks.html
+++ b/project/templates/tasks.html
@@ -3,43 +3,43 @@
 
 <h1>Welcome to FlaskTaskr</h1>
 <br>
-<a href="{{ url_for('logout') }}">Logout</a>
+<a href="{{ url_for('users.logout') }}">Logout</a>
 <div class="add-task">
   <h3>Add a new task:</h3>
-    <form action="{{ url_for('new_task') }}" method="post">
+    <form action="{{ url_for('tasks.new_task') }}" method="post">
       {{ form.csrf_token }}
-      <div class="form-group">
-        {{ form.name(placeholder="name") }}
-        <span class="error">
-          {% if form.name.errors %}
-            {% for error in form.name.errors %}
-              {{ error }}
-            {% endfor %}
-          {% endif %}
-        </span>
-      </div>
-      <div class="form-group">
-        {{ form.due_date(placeholder="due date") }}
-        <span class="error">
-          {% if form.due_date.errors %}
-            {% for error in form.due_date.errors %}
-              {{ error }}
-            {% endfor %}
-          {% endif %}
-        </span>
-      </div>
-      <div class="form-group">
-        {{ form.priority.label }}
-        {{ form.priority }}
-        <span class="error">
-          {% if form.priority.errors %}
-            {% for error in form.priority.errors %}
-              {{ error }}
-            {% endfor %}
-          {% endif %}
-        </span>
-      </div>
-      <div class="form-group"><input class="btn btn-default" type="submit" value="Submit"></div>
+      <p>
+      {{ form.name(placeholder="name") }}
+      <span class="error">
+        {% if form.name.errors %}
+          {% for error in form.name.errors %}
+            {{ error }}
+          {% endfor %}
+        {% endif %}
+      </span>
+      </p>
+      <p>
+      {{ form.due_date(placeholder="due date") }}
+      <span class="error">
+        {% if form.due_date.errors %}
+          {% for error in form.due_date.errors %}
+            {{ error }}
+          {% endfor %}
+        {% endif %}
+      </span>
+      </p>
+      <p>
+      {{ form.priority.label }}
+      {{ form.priority }}
+      <span class="error">
+        {% if form.priority.errors %}
+          {% for error in form.priority.errors %}
+            {{ error }}
+          {% endfor %}
+        {% endif %}
+      </span>
+      </p>
+      <p><input class="btn btn-default" type="submit" value="Submit"></p>
     </form>
 </div>
 <div class="entries">
@@ -66,8 +66,8 @@
           <td width="50px">{{ task.priority }}</td>
           <td width="90px">{{ task.poster.name }}</td>
           <td>
-            <a href="{{ url_for('delete_entry', task_id = task.task_id) }}">Delete</a>  -
-            <a href="{{ url_for('complete', task_id = task.task_id) }}">Mark as Complete</a>
+            <a href="{{ url_for('tasks.delete_entry', task_id = task.task_id) }}">Delete</a>  -
+            <a href="{{ url_for('tasks.complete', task_id = task.task_id) }}">Mark as Complete</a>
           </td>
         </tr>
       {% endfor %}
@@ -98,12 +98,11 @@
           <td width="50px">{{ task.priority }}</td>
           <td width="90px">{{ task.poster.name }}</td>
           <td>
-             <a href="{{ url_for('delete_entry', task_id = task.task_id) }}">Delete</a>
+             <a href="{{ url_for('tasks.delete_entry', task_id = task.task_id) }}">Delete</a>
           </td>
         </tr>
       {% endfor %}
     </table>
   </div>
 </div>
-
 {% endblock %}
