--- a/project/templates/tasks.html
+++ b/project/templates/tasks.html
@@ -8,38 +8,38 @@
   <h3>Add a new task:</h3>
     <form action="{{ url_for('tasks.new_task') }}" method="post">
       {{ form.csrf_token }}
-      <p>
-      {{ form.name(placeholder="name") }}
-      <span class="error">
+      <div class="form-group">
+        {{ form.name(placeholder="name") }}
         {% if form.name.errors %}
-          {% for error in form.name.errors %}
-            {{ error }}
-          {% endfor %}
+          <span class="error">
+            {% for error in form.name.errors %}
+              {{ error }}
+            {% endfor %}
+          </span>
         {% endif %}
-      </span>
-      </p>
-      <p>
-      {{ form.due_date(placeholder="due date") }}
-      <span class="error">
+      </div>
+      <div class="form-group">
+        {{ form.due_date(placeholder="due date") }}
         {% if form.due_date.errors %}
-          {% for error in form.due_date.errors %}
-            {{ error }}
-          {% endfor %}
+          <span class="error">
+            {% for error in form.due_date.errors %}
+              {{ error }}
+            {% endfor %}
+          </span>
         {% endif %}
-      </span>
-      </p>
-      <p>
-      {{ form.priority.label }}
-      {{ form.priority }}
-      <span class="error">
+      </div>
+      <div class="form-group">
+        {{ form.priority.label }}
+        {{ form.priority }}
         {% if form.priority.errors %}
-          {% for error in form.priority.errors %}
-            {{ error }}
-          {% endfor %}
+          <span class="error">
+            {% for error in form.priority.errors %}
+              {{ error }}
+            {% endfor %}
+          </span>
         {% endif %}
-      </span>
-      </p>
-      <p><input class="btn btn-default" type="submit" value="Submit"></p>
+      </div>
+      <div class="form-group"><input class="btn btn-default" type="submit" value="Submit"></div>
     </form>
 </div>
 <div class="entries">
@@ -65,10 +65,12 @@
           <td width="100px">{{ task.posted_date }}</td>
           <td width="50px">{{ task.priority }}</td>
           <td width="90px">{{ task.poster.name }}</td>
+          {% if session.role == 'admin' or task.poster.name == session.name %}
           <td>
-            <a href="{{ url_for('tasks.delete_entry', task_id = task.task_id) }}">Delete</a>  -
-            <a href="{{ url_for('tasks.complete', task_id = task.task_id) }}">Mark as Complete</a>
+            <a href="{{ url_for('tasks.delete_entry', task_id = task.task_id) }}">delete</a>  -
+            <a href="{{ url_for('tasks.complete', task_id = task.task_id) }}">Mark as complete</a>
           </td>
+          {% endif %}
         </tr>
       {% endfor %}
     </table>
@@ -97,9 +99,11 @@
           <td width="100px">{{ task.posted_date }}</td>
           <td width="50px">{{ task.priority }}</td>
           <td width="90px">{{ task.poster.name }}</td>
+          {% if session.role == 'admin' or task.poster.name == session.name %}
           <td>
-             <a href="{{ url_for('tasks.delete_entry', task_id = task.task_id) }}">Delete</a>
+             <a href="{{ url_for('tasks.delete_entry', task_id = task.task_id) }}">delete</a>
           </td>
+          {% endif %}
         </tr>
       {% endfor %}
     </table>
